# routes/game.js
@@ -1,12 +1,12 @@
 const router = require("express").Router();
-const product = require("../models/product");
+const game = require("../models/game");
 const { verifyToken } = require("../validation");
 
-// Create new product
+// Create new game
 router.post("/", verifyToken, (req, res) => {
 //router.post("/", (req, res) => {
     const data = req.body;
-    product.insertMany(data)
+    game.insertMany(data)
         .then(data => { res.status(201).send(data); })
         .catch(err => { res.status(500).send({ message: err.message }); });
 });
@@ -16,58 +16,58 @@ router.get("/", (req, res) => {
     const name = req.query.name;
  
     var condition = name ? { name: { $regex: new RegExp(name), $options: "i" } } : {};
-    product.find(condition)
+    game.find(condition)
         .then(data => { res.send(data); })
         .catch(err => { res.status(500).send({ message: err.message }); });
 });
 
-// Retrieve Products based on stock
+// Retrieve games based on stock
 router.get("/instock", verifyToken, (req, res) => {
-    product.find({ inStock: true })
+    game.find({ inStock: true })
         .then(data => { res.send(data); })
         .catch(err => { res.status(500).send({ message: err }); })
 });
 
 router.get("/:id", (req, res) => {
-    product.findById(req.params.id)
+    game.findById(req.params.id)
         .then(data => { res.send(data); })
         .catch(err => { res.status(500).send({ message: err.message }); });
 });
 
-// Update Product
+// Update game
 router.put("/:id", verifyToken, (req, res) => {
 //router.put("/:id", (req, res) => {
     const id = req.params.id;
 
-    product.findByIdAndUpdate(id, req.body)
+    game.findByIdAndUpdate(id, req.body)
         .then(data => {
             if (!data)
-                res.status(404).send({ message: "Cannot update product with id=" + id + ". Maybe product was not found!" });
+                res.status(404).send({ message: "Cannot update game with id=" + id + ". Maybe game was not found!" });
             else
-                res.send({ message: "Product was updated successfully." });
+                res.send({ message: "game was updated successfully." });
         })
         .catch(err => {
-            res.status(500).send({ message: "Error updating Product with id=" + id });
+            res.status(500).send({ message: "Error updating game with id=" + id });
         });
 
 });
 
-// Delete Product
+// Delete game
 //router.delete("/:id", (req, res) => {
 router.delete("/:id", verifyToken, (req, res) => {
     const id = req.params.id;
 
-    product.findByIdAndRemove(id,{useFindAndModify: false})
+    game.findByIdAndRemove(id,{useFindAndModify: false})
         .then(data => {
             if (!data) {
                 res.status(404).send({
-                    message: `Cannot delete Product with id=${id}. Maybe Product was not found!`
+                    message: `Cannot delete Movie with id=${id}. Maybe game was not found!`
                 });
             }
-            else { res.send({ message: "Product was deleted successfully!" }); }
+            else { res.send({ message: "game was deleted successfully!" }); }
         })
         .catch(err => {
-            res.status(500).send({ message: "Could not delete Product with id=" + id });
+            res.status(500).send({ message: "Could not delete game with id=" + id });
         });
 });
 
